# gift_analyzer

./: .gitignore  .pre-commit-config-yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  pyproject.toml
gift_analyzer/: asgi.py  settings.py  urls.py  wsgi.py
villagers/: admin.py  apps.py  filters.py  models.py  pagination.py  serializers.py  urls.py  views.py
villagers/fixtures/: my_fixture.json
villagers/migrations/: 0001_initial.py
villagers/tests/: tests.py
